Added work experience

--- a/index.html
+++ b/index.html
@@ -60,100 +60,117 @@
                 </div>
             </section>
             <section id="workexp">
-                <h2>Work experience</h2>
+                <h2>Work Experience</h2>
                 <div class="workexp-entry">
-                    <div class="workexp-entry-title">Remote PHP Developer - Tucasi</div>
+                    <h3 class="workexp-entry-title">PHP Developer - Tucasi</h3>
                     <div class="workexp-entry-company">Eastleigh, Hampshire</div>
-                    <div class="workexp-entry-date">November 20 – Present</div>
+                    <div class="workexp-entry-date">November 2020 – Present</div>
                     <div class="workexp-entry-content">
-                        <p>Worked on the main product which is a school seating module built in a custom PHP framework.</p>
-                        <p>Worked on a REST API built in Laravel to centralise management of school data which is used for all apps.</p>
-                        <p>Used Angular to develop homework and detention frontend apps, both these apps would also interact with the Laravel API.</p>
-                        <p>Built an Android / iOS web homework app using Ionic framework used by students and parents.</p>
+                        <ul>
+                            <li>Worked on the main product which is a school seating module built in a custom PHP framework.</li>
+                            <li>Worked on a REST API built in Laravel to centralise management of school data which is used for all apps.</li>
+                            <li>Used Angular to develop homework and detention frontend apps, both these apps would also interact with the Laravel API.</li>
+                            <li>Built an Android / iOS web homework app using Ionic framework used by students and parents.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="workexp-entry">
-                    <div class="workexp-entry-title">PHP Developer - Castleton Technology</div>
+                    <h3 class="workexp-entry-title">PHP Developer - Castleton Technology</h3>
                     <div class="workexp-entry-company">Sutton Coldfield, West Midlands</div>
-                    <div class="workexp-entry-date">July 19 – October 20</div>
+                    <div class="workexp-entry-date">July 2019 – October 2020</div>
                     <div class="workexp-entry-content">
-                        <p>Worked on projects and support tickets for the House repairs PHP system which provides services to multiple clients.</p>
-                        <p>Developed a REST API in PHP using Laravel to modernise and migrate functionality off of the House repairs system.</p>
-                        <p>Tasks are worked on in two week sprints with code committed with SVN and GIT version control.</p>
-                        <p>Trained in and worked with C# and Angular to support other apps written with those technologies.</p>
+                        <ul>
+                            <li>Worked on projects and support tickets for the House repairs PHP system which provides services to multiple clients.</li>
+                            <li>Developed a REST API in PHP using Laravel to modernise and migrate functionality off of the House repairs system.</li>
+                            <li>Tasks are worked on in two week sprints with code committed with SVN and GIT version control.</li>
+                            <li>Trained in and worked with C# and Angular to support other apps written with those technologies.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="workexp-entry">
-                    <div class="workexp-entry-title">Senior Developer - MoreNiche</div>
+                    <h3 class="workexp-entry-title">Senior Developer - MoreNiche</h3>
                     <div class="workexp-entry-company">Nottingham, Nottinghamshire</div>
-                    <div class="workexp-entry-date">January 18 – July 19</div>
+                    <div class="workexp-entry-date">January 2018 – July 2019</div>
                     <div class="workexp-entry-content">
-                        <p>Created and developed a Laravel API to manage affiliate data, also API testing was run to ensure integrity of the API.</p>
-                        <p>Worked on features for the affiliate dashboard and tracking server built with the Silex PHP framework.</p>
-                        <p>Worked with both Scrum and Kanban.</p>
-                        <p>Been on-call outside of work hours to maintain uptime of servers.</p>
+                        <ul>
+                            <li>Created and developed a Laravel API to manage affiliate data, also API testing was run to ensure integrity of the API.</li>
+                            <li>Worked on features for the affiliate dashboard and tracking server built with the Silex PHP framework.</li>
+                            <li>Worked with both Scrum and Kanban.</li>
+                            <li>Been on-call outside of work hours to maintain uptime of servers.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="workexp-entry">
-                    <div class="workexp-entry-title">Web Developer - FPS Distribution</div>
+                    <h3 class="workexp-entry-title">Web Developer - FPS Distribution</h3>
                     <div class="workexp-entry-company">Stratford-upon-Avon, Warwickshire</div>
-                    <div class="workexp-entry-date">November 20 – Present</div>
+                    <div class="workexp-entry-date">November 2020 – Present</div>
                     <div class="workexp-entry-content">
-                        <p>Built and migrated features to a new Laravel API to replace the previous one built in NodeJS.</p>
-                        <p>Worked on tasks and fixed issues for the company's ticketing system and company portal by programming PHP modules for Drupal.</p>
+                        <ul>
+                            <li>Built and migrated features to a new Laravel API to replace the previous one built in NodeJS.</li>
+                            <li>Worked on tasks and fixed issues for the company's ticketing system and company portal by programming PHP modules for Drupal.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="workexp-entry">
-                    <div class="workexp-entry-title">Software Developer - Carphone Warehouse</div>
+                    <h3 class="workexp-entry-title">Software Developer - Carphone Warehouse</h3>
                     <div class="workexp-entry-company">Loughborough, Leicestershire</div>
-                    <div class="workexp-entry-date">June 15 – April 16</div>
+                    <div class="workexp-entry-date">June 2015 – April 2016</div>
                     <div class="workexp-entry-content">
-                        <p>Worked on the main product which is a school seating module built in a custom PHP framework.</p>
-                        <p>Worked on a REST API built in Laravel to centralise management of school data which is used for all apps.</p>
-                        <p>Used Angular to develop homework and detention frontend apps, both these apps would also interact with the Laravel API.</p>
-                        <p>Built an Android / iOS web homework app using Ionic framework used by students and parents.</p>
+                        <ul>
+                            <li>Worked on the main product which is a school seating module built in a custom PHP framework.</li>
+                            <li>Worked on a REST API built in Laravel to centralise management of school data which is used for all apps.</li>
+                            <li>Used Angular to develop homework and detention frontend apps, both these apps would also interact with the Laravel API.</li>
+                            <li>Built an Android / iOS web homework app using Ionic framework used by students and parents.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="workexp-entry">
-                    <div class="workexp-entry-title">Web Developer - Twist Digital</div>
+                    <h3 class="workexp-entry-title">Web Developer - Twist Digital</h3>
                     <div class="workexp-entry-company">Nottingham, Nottinghamshire</div>
-                    <div class="workexp-entry-date">April 13 – June 15</div>
+                    <div class="workexp-entry-date">April 2013 – June 2015</div>
                     <div class="workexp-entry-content">
-                        <p>Worked on the company’s affiliate network website and tracking app built with Zend, Silex and MongoDB.</p>
-                        <p>Maintained uptime of servers ensuring uptime, performed live releases and updated live data.</p>
-                        <p>Supported and mentored junior web developers.</p>
+                        <ul>
+                            <li>Worked on the company’s affiliate network website and tracking app built with Zend, Silex and MongoDB.</li>
+                            <li>Maintained uptime of servers ensuring uptime, performed live releases and updated live data.</li>
+                            <li>Supported and mentored junior web developers.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="workexp-entry">
-                    <div class="workexp-entry-title">Freelance Web Developer - Mesh Web Studio</div>
+                    <h3 class="workexp-entry-title">Web Developer - Mesh Web Studio</h3>
                     <div class="workexp-entry-company">Nottingham, Nottinghamshire</div>
-                    <div class="workexp-entry-date">March 12 – March 13</div>
+                    <div class="workexp-entry-date">March 2012 – March 2013</div>
                     <div class="workexp-entry-content">
-                        <p>Designed and coded bespoke websites for clients in PHP.</p>
-                        <p>Conducted work remotely with clients located all over the UK. </p>
-                        <p>Communicated regularly with clients to give progress updates and ensure satisfaction with work produced.</p>
+                        <ul>
+                            <li>Designed and coded bespoke websites for clients in PHP.</li>
+                            <li>Conducted work remotely with clients located all over the UK.</li>
+                            <li>Communicated regularly with clients to give progress updates and ensure satisfaction with work produced.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="workexp-entry">
-                    <div class="workexp-entry-title">Web Developer - Turn90</div>
+                    <h3 class="workexp-entry-title">Web Developer - Turn90</h3>
                     <div class="workexp-entry-company">Birmingham, West Midlands</div>
-                    <div class="workexp-entry-date">January 11 - March 12</div>
+                    <div class="workexp-entry-date">January 2011 - March 2012</div>
                     <div class="workexp-entry-content">
-                        <p>Implemented features for numerous PHP e-commerce websites that were built with Interspire shopping cart.</p>
-                        <p>Converted templates from Photoshop to HTML, CSS & JavaScript.</p>
+                        <ul>
+                            <li>Implemented features for numerous PHP e-commerce websites that were built with Interspire shopping cart.</li>
+                            <li>Converted templates from Photoshop to HTML, CSS & JavaScript.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="workexp-entry">
-                    <div class="workexp-entry-title">Web Developer - Clownfish Design</div>
+                    <h3 class="workexp-entry-title">Web Developer - Clownfish Design</h3>
                     <div class="workexp-entry-company">Birmingham, West Midlands</div>
-                    <div class="workexp-entry-date">January 11 - March 12</div>
+                    <div class="workexp-entry-date">January 2011 - March 2012</div>
                     <div class="workexp-entry-content">
-                        <p>Received task requests from clients to work on various PHP websites.</p>
-                        <p>Worked on templating by converting Photoshop designs to HTML/CSS.</p>
+                        <ul>
+                            <li>Received task requests from clients to work on various PHP websites.</li>
+                            <li>Worked on templating by converting Photoshop designs to HTML/CSS.</li>
+                        </ul>
                     </div>
                 </div>
             </section>
-            <footer>This is a footer!</footer>
         </div>
     </body>
 </html>
