Added profile links

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
                     <h1>Harmesh Uppal</h1>
                     <p>Full-stack developer with over 10 years experience who mainly specialises in PHP and JavaScript</p>
                     <p><span>Location:&nbsp;</span>West Bromwich, UK</p>
+                    <div id="profile-links">
+                        <a href="https://github.com/meshu-dev" target="_blank">
+                            <img src="./images/github-icon.png" />
+                        </a>
+                        <a href="https://www.linkedin.com/in/harmeshuppal" target="_blank">
+                            <img src="./images/linkedin-icon.png" />
+                        </a>
+                    </div>
                 </div>
             </section>
             <section id="skills">
