--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
         <link rel="stylesheet" href="./styles/main.css">
     </head>
     <body>
-        <div id="wrapper">
+        <header>
+            <div id="header-wrapper">
+                <div id="header-logo">Curriculum Vitae</div>
+                <div id="header-links">
+                    <span class="header-link">Download</span>
+                    <span class="header-link">Contact</span>
+                </div>
+            </div>
+        </header>
+        <div id="body-wrapper">
             <section id="profile">
                 <div id="profile-pic-wrapper">
                     <img id="profile-pic" src="https://cdn.vectorstock.com/i/1000x1000/17/59/default-placeholder-businessman-half-length-portr-vector-21181759.webp" />
@@ -15,7 +24,9 @@
                 <div id="profile-info">
                     <h1>Harmesh Uppal</h1>
                     <p>Full-stack developer with over 10 years experience who mainly specialises in PHP and JavaScript</p>
-                    <p><span>Location:&nbsp;</span>West Bromwich, UK</p>
+                    <p>
+                        <span>Location:&nbsp;</span>West Bromwich, UK
+                    </p>
                     <div id="profile-links">
                         <a href="https://github.com/meshu-dev" target="_blank">
                             <img src="./images/github-icon.png" />
