--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div id="header-wrapper">
                 <div id="header-logo">Curriculum Vitae</div>
                 <div id="header-links">
-                    <span class="header-link">Download</span>
+                    <a href="https://github.com/meshu-dev" target="_blank" class="header-link">Download</a>
                     <span class="header-link">Contact</span>
                 </div>
             </div>
