--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles/main.css" />
         <link rel="stylesheet" href="./styles/sweetalert2.min.css" />
+        <script type="application/javascript"
+                src="https://www.google.com/recaptcha/api.js?render=6LfRZrUhAAAAAJ5O2p0hgsE0uFStSIeOz1aemopm"></script>
         <script type="text/javascript" src="./scripts/sweetalert2.all.min.js"></script>
+        <script type="text/javascript" src="./scripts/recaptcha.js"></script>
+        <script type="text/javascript" src="./scripts/contact.js"></script>
         <script type="text/javascript" src="./scripts/main.js"></script>
     </head>
     <body>
@@ -194,19 +198,19 @@
                 </div>
             </section>
         </main>
-        <div id="contactform-content">
-            <div id="contactform">
+        <div class="contactform-content">
+            <div class="contactform">
                 <div class="contactform-row">
                     <span>Name:</span>
-                    <input type="text" name="" value="" />
+                    <input type="text" name="name" value="" required />
                 </div>
                 <div class="contactform-row">
                     <span>Email:</span>
-                    <input type="text" name="" value="" />
+                    <input type="text" name="email" value="" required />
                 </div>
                 <div class="contactform-row">
                     <span>Message:</span>
-                    <textarea></textarea>
+                    <textarea  name="message" required></textarea>
                 </div>
             </div>
         </div>
